add ships handlers by trackID, update swagger documentation, and add router
